# fig

./: .gitignore  CLAUDE.md  README.md  TODO.md  fig.py  pyproject.toml
static/: logo.pxd
tests/: test_fig.py
